--- a/wordle_game/style.css
+++ b/wordle_game/style.css
@@ -3,10 +3,12 @@
 :root {
   --color-bg: rgb(26, 26, 26);
   --color-border: rgb(91, 91, 91);
+  --color-border-2: rgb(175, 175, 175);
   --color-not-in-word: rgb(150, 150, 145);
   --color-in-word: hsl(62, 55%, 67%);
   --color-in-place: hsl(109, 40%, 49%);
   --text-in: rgb(26, 26, 26);
+  --box-flip: scale(1, -1);
 }
 
 * {
@@ -21,8 +23,30 @@ h1 {
   color: white;
   font-weight: 100;
   font-size: 4rem;
-  margin-bottom: 30px;
-  border-bottom: 2px var(--color-border) solid;
+  margin-bottom: 40px;
+  border-bottom: 2px white solid;
+  width: 424px;
+  text-align: center;
+  letter-spacing: 28px;
+  padding-left: 28px;
+}
+
+.warning {
+  color: white;
+  font-weight: 100;
+  font-size: 2rem;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 10px 30px;
+  border-radius: 10px;
+  position: absolute;
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.4s ease;
+}
+
+.on-screen {
+  opacity: 100%;
 }
 
 body {
@@ -32,16 +56,55 @@ body {
   justify-content: center;
   flex-direction: column;
   height: 100vh;
+  /* transform: translateY(-6rem); */
+}
+
+.overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 100vh;
+  width: 100vw;
+  z-index: 20;
+  transform: scale(0);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: all 0.5s ease-in-out;
+}
+
+.overlay-open {
+  transform: scale(1);
+}
+
+.overlay-text {
+  font-size: 4rem;
+  color: white;
+  text-align: center;
+}
+
+.overlay button {
+  height: 50px;
+  width: 120px;
+  border-radius: 2px;
+  border: none;
+  font-size: 1rem;
+}
+
+.game-grid {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
 
 .grid-row {
   display: flex;
   justify-content: flex-end;
-  padding: 10px;
-  gap: 10px;
+  gap: 6px;
   padding-bottom: 0;
-  transform: translate(0, 0);
-  transition: transform 0.08s ease;
+  user-select: none;
+  transition: all 0.25s ease;
 }
 
 .shake-left {
@@ -52,21 +115,36 @@ body {
   transform: translate(6px, 0);
 }
 
+.slide-left {
+  opacity: 0;
+  transform: translateX(-150px);
+}
+
+.slide-right {
+  opacity: 0;
+  transform: translateX(150px);
+}
+
 .box {
-  height: 100px;
-  width: 100px;
-  border: 2px var(--color-border) solid;
+  height: 80px;
+  width: 80px;
+  border: 1px var(--color-border) solid;
   border-radius: 2px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all 0.25s ease-in-out;
 }
 
 .box-letter {
-  font-size: 4rem;
+  font-size: 3em;
   color: rgb(35, 35, 35);
   color: white;
   font-weight: 200;
+}
+
+.entered {
+  border-color: var(--color-border-2);
 }
 
 .not-in-word,
@@ -74,6 +152,8 @@ body {
   font-weight: 100;
   background-color: var(--color-border);
   color: var(--text-in);
+  border: none;
+  transform: var(--box-flip);
 }
 
 .in-word,
@@ -82,6 +162,7 @@ body {
   background-color: var(--color-in-word);
   color: var(--text-in);
   border: none;
+  transform: var(--box-flip);
 }
 
 .in-place,
@@ -90,4 +171,99 @@ body {
   background-color: var(--color-in-place);
   color: var(--text-in);
   border: none;
+  transform: var(--box-flip);
+}
+
+.box span {
+  background: none;
+  /* transition: all 0.6s ease-in-out; */
+}
+
+#flip-text {
+  transform: scale(1, 1);
+}
+
+.keyboard-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  gap: 2px;
+  margin-top: 40px;
+  user-select: none;
+}
+
+.key-row {
+  display: flex;
+  gap: 2px;
+}
+
+.key {
+  height: 40px;
+  width: 40px;
+  border: none;
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+  background-color: rgb(196, 196, 196);
+  border-radius: 2px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.25s ease-in-out;
+}
+
+.key.large {
+  width: 60px;
+  font-size: 0.9rem;
+}
+
+.key:active {
+  transform: scale(0.96);
+}
+
+.key-not-in-word,
+.key-not-in-word span {
+  background-color: var(--color-not-in-word);
+  transform: var(--box-flip);
+}
+
+.key-in-word,
+.key-in-word span {
+  background-color: var(--color-in-word);
+  transform: var(--box-flip);
+}
+
+.key-in-place,
+.key-in-place span {
+  background-color: var(--color-in-place);
+  transform: var(--box-flip);
+}
+
+.key:hover {
+  background-color: white;
+}
+
+.key span {
+  background: none;
+}
+
+.bounce {
+  transform: scale(1, -1) translateY(3px);
+}
+
+.bounce2 {
+  transform: scale(1, -1) translateY(-3px);
+}
+
+.key-flip-two {
+  opacity: 0;
+  transform: scale(-1, -1);
+}
+
+.key-flip {
+  opacity: 0;
+  transform: scale(-1, 1);
 }
